apps/production/finace/finance-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ingress
  namespace: ownapps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - hosts:
        - finance.yuandrk.net
      secretName: finance-ingress-prod
  rules:
    - host: "finance.yuandrk.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance
                port:
                  number: 5006
